--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 </div>
 
-<!--<h1 id="instruction-text">press space bar to star the game</h1>-->
+<h1 id="instruction-text">press space bar to star the game</h1>
 <script src="js/script.js"></script>
 <script src="assets/jquery-3.6.0.min.js"></script>
 </body>
